--- a/client/src/components/views/teacher/assets/css/assignments.css
+++ b/client/src/components/views/teacher/assets/css/assignments.css
@@ -1,3 +1,1 @@
-html {
-    background: #fff;
-}
+.abacus-assignments{max-height:calc(100vh - 150px)}.abacus-assignments .card-title{color:#799FB0;padding-bottom:20px}
