--- a/client/src/components/views/teacher/assets/css/grades.css
+++ b/client/src/components/views/teacher/assets/css/grades.css
@@ -1,3 +1,1 @@
-html {
-    background: #fff;
-}
+.abacus-grades{max-height:calc(100vh - 150px)}.abacus-grades .card-title{color:#799FB0;padding-bottom:20px}.abacus-grades .row-overview{position:fixed;right:0}
