--- a/client/src/components/views/teacher/assets/scss/home.scss
+++ b/client/src/components/views/teacher/assets/scss/home.scss
@@ -49,8 +49,9 @@
     padding: 0;
     text-align: center;
     background: rgba(255, 255, 255, .35);
-    overflow: hidden !important;
     transition: .5s;
+    width: 310px;
+    margin: 25px;
 
     a {
       color: #455a64;
@@ -82,6 +83,35 @@
         color: lighten(#31657D, 20%);
         transition: .5s;
       }
+    }
+  }
+}
+
+.top-bar {
+  background: rgba(121,159,176,.75);
+  color: #fff;
+  box-shadow: 0 4px 2px -4px rgba(0,0,0,.50);
+  height: 54px;
+  margin-bottom: 0;
+
+  input[type="text"] {
+    color: #fff;
+    width: 50%;
+    text-align: center;
+    margin-left: 25%;
+  }
+
+  ::placeholder {
+    color: #fff;
+  }
+
+  h6 {
+    margin: 0;
+    padding-top: 15px;
+    text-align: center;
+
+    span {
+      color: darken(#31657D, 10%);
     }
   }
 }
