--- a/client/src/components/assets/css/home.css
+++ b/client/src/components/assets/css/home.css
@@ -1,81 +1,82 @@
 nav {
-    height: 95px;
-    line-height: 95px;
-    border-bottom: 5px solid #E6877C;
-    font-family: Futura, sans-serif;
-    background-color: transparent;
+  height: 95px;
+  line-height: 95px;
+  border-bottom: 5px solid #e6877c;
+  font-family: Futura, sans-serif;
+  background-color: transparent;
 }
 
 .nav-wrapper {
-    background: rgba(225, 225, 225, .75);
-    background: rgba(225, 225, 225, .75);
+  background: rgba(225, 225, 225, 0.75);
+  background: rgba(225, 225, 225, 0.75);
 }
 
 nav .brand-logo {
-    color: #343434;
+  color: #343434;
 }
 
 nav .brand-logo i {
-    font-size: 36px;
-    margin: 15px 10px 0 25px;
+  font-size: 36px;
+  margin: 15px 10px 0 25px;
 }
 
-nav ul a, nav ul a button {
-    font-family: Futura, sans-serif;
+nav ul a,
+nav ul a button {
+  font-family: Futura, sans-serif;
 }
 
 nav ul a {
-    color: #343434;
+  color: #343434;
 }
 
 .parallax-header {
-    position: absolute;
-    top: 250px;
-    left: 250px;
-    color: #fff;
-    background: rgba(0,0,0, .25);
-    padding: 20px;
-    border-radius: 6px;
-    width: 50%;
-    text-shadow: 0 0 5px rgba(0,0,0, .75);
+  position: absolute;
+  top: 250px;
+  left: 250px;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.25);
+  padding: 20px;
+  border-radius: 6px;
+  width: 50%;
+  text-shadow: 0 0 5px rgba(0, 0, 0, 0.75);
 }
 
 .parallax-header h2 {
-    font-size: 60px;
-    font-weight: 900;
-    margin: 0;
-    color: #fff;
-    font-family: Futura, sans-serif;
+  font-size: 60px;
+  font-weight: 900;
+  margin: 0;
+  color: #fff;
+  font-family: Futura, sans-serif;
 }
 
 .parallax-header p {
-    font-size: 32px;
-    font-weight: 200;
-    margin: 0;
+  font-size: 32px;
+  font-weight: 200;
+  margin: 0;
 }
 
 .card-image {
-    padding: 20px;
-    height: 175px;
+  padding: 20px;
+  height: 175px;
 }
 
 .card-attendance {
-    background: #E6877C;
+  background: #e6877c;
 }
 
 .card-assignments {
-    background: #31657D;
+  background: #31657d;
 }
 
 .card-grades {
-    background: #799FB0;
+  background: #799fb0;
 }
 
 .card-image i {
-    font-size: 72px;
-    color: #fff;
+  font-size: 72px;
+  color: #fff;
 }
 
 h6 {
-    text-align: center;
+  text-align: center;
 }
